// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Select correctly 1`] = `
<Component
  className=""
  onChange={[MockFunction]}
  palette={
    Object {
      "actionsDropdown": Object {
        "backgroundColor": "#3fbaca",
        "fontColor": "#ffffff",
      },
      "anchor": Object {
        "disabledFontColor": "#9d9d9d",
        "fontColor": "#3fbaca",
      },
      "button": Object {
        "backgroundColor": "#3fbaca",
        "disabledBackgroundColor": "#e2e2e2",
        "fontColor": "#ffffff",
      },
      "commonElement": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e2e2",
        "fontColor": "#293346",
      },
      "description": Object {
        "fontColor": "#9d9d9d",
      },
      "label": Object {
        "fontColor": "#2d2d2d",
      },
      "layout": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e2e2",
        "fontColor": "#293346",
      },
      "main": Object {
        "backgroundColor": "#f7f7f7",
      },
      "toggleElement": Object {
        "backgroundColor": "#425579",
        "borderColor": "#e2e2e2",
        "fontColor": "#ffffff",
        "secondaryBackgroundColor": "#ffffff",
        "secondaryFontColor": "#9d9d9d",
      },
    }
  }
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<Component
  className=""
  dataLabel="select"
  onChange={[MockFunction]}
  palette={
    Object {
      "actionsDropdown": Object {
        "backgroundColor": "#3fbaca",
        "fontColor": "#ffffff",
      },
      "anchor": Object {
        "disabledFontColor": "#9d9d9d",
        "fontColor": "#3fbaca",
      },
      "button": Object {
        "backgroundColor": "#3fbaca",
        "disabledBackgroundColor": "#e2e2e2",
        "fontColor": "#ffffff",
      },
      "commonElement": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e2e2",
        "fontColor": "#293346",
      },
      "description": Object {
        "fontColor": "#9d9d9d",
      },
      "label": Object {
        "fontColor": "#2d2d2d",
      },
      "layout": Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e2e2",
        "fontColor": "#293346",
      },
      "main": Object {
        "backgroundColor": "#f7f7f7",
      },
      "toggleElement": Object {
        "backgroundColor": "#425579",
        "borderColor": "#e2e2e2",
        "fontColor": "#ffffff",
        "secondaryBackgroundColor": "#ffffff",
        "secondaryFontColor": "#9d9d9d",
      },
    }
  }
  selectedValue={
    Array [
      "2",
      "4",
    ]
  }
  showList={true}
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;
